Fixed the layout issues for the future and fancies section. These changes work both in IE and Chrome(and presumably in other webkit browsers)

--- a/css/groud-frank-ie.css
+++ b/css/groud-frank-ie.css
@@ -105,7 +105,7 @@ h4{
     align-items: center;
     flex-wrap: wrap;
     width: 95%;
-    max-width: 100%;
+    /* max-width: 100%; */
     height: auto;
     min-height: 95vh;
     border-radius: 5px;
@@ -884,7 +884,7 @@ transform: scale(1.05);
   width: 100%;
   min-height: 200px;
   margin-bottom: 60px;
-  /* background-color: pink; */
+  /* border: 2px solid black; */
 }
 
 .future-plans-layout .container-1{
@@ -894,17 +894,17 @@ transform: scale(1.05);
   align-items: flex-start;
   height: 100%;
   width: 40%;
-  /* background-color: green; */
+  /* border: 2px solid red; */
 }
 
 .future-plans-layout .container-2{
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   height: 100%;
   width: 60%;
-  /* background-color: purple; */
+  /* border: 2px solid blue; */
 }
 
 #future .future-plans-layout-reverse{
@@ -916,7 +916,6 @@ transform: scale(1.05);
   width: 100%;
   min-height: 200px;
   margin-bottom: 60px;
-  /* background-color: pink; */
 }
 
 .future-plans-layout-reverse .container-1{
@@ -926,17 +925,15 @@ transform: scale(1.05);
   align-items: flex-end;
   height: 100%;
   width: 40%;
-  /* background-color: green; */
 }
 
 .future-plans-layout-reverse .container-2{
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   height: 100%;
   width: 60%;
-  /* background-color: purple; */
 }
 
 
@@ -990,7 +987,6 @@ transform: scale(1.05);
 }
 
 #me-subsection #fancies{
-  /* width: 950px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1008,9 +1004,10 @@ transform: scale(1.05);
   justify-content: center;
   align-items: center;
   width: 100%;
+  /* height: 250px; */
   min-height: 200px;
   margin-bottom: 60px;
-  /* background-color: pink; */
+  /* border: 2px black solid; */
 }
 
 .fancies-layout .container-1{
@@ -1020,15 +1017,17 @@ transform: scale(1.05);
   align-items: flex-start;
   height: 100%;
   width: 50%;
+  /* border: 2px red solid; */
 }
 
 .fancies-layout .container-2{
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   height: 100%;
   width: 50%;
+  /* border: 2px blue solid; */
 }
 
 #fancies .fancies-layout-reverse{
@@ -1040,7 +1039,6 @@ transform: scale(1.05);
   width: 100%;
   min-height: 200px;
   margin-bottom: 60px;
-  /* background-color: pink; */
 }
 
 
@@ -1065,8 +1063,9 @@ transform: scale(1.05);
 
 
 .container-2 .txt-container{
-  /* white-space: pre-line;*/
   text-align: left;
+  /* border: 2px green solid; */
+  width: 100%;
 }
 
 #me-subsection #fancies h1{
